--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@ title: "My Resume"
 ---
 
 <html>
-<body>
+<body id="resume">
 	<h1> Sonda Sengupta </h1>
 	<a href="mailto:sondasengupta@example.comm"><sondasengupta@example.com</a>
 	<a href="tel:+18001111111"><(800) 111-1111</a>
