--- a/resume.html
+++ b/resume.html
@@ -5,9 +5,8 @@ title: "My Resume"
 
 <html>
 <body id="resume">
-	<h1> Sonda Sengupta </h1>
-	<a href="mailto:sondasengupta@example.comm"><sondasengupta@example.com</a>
-	<a href="tel:+18001111111"><(800) 111-1111</a>
+	<!-- <h1> Sonda Sengupta </h1> -->
+	<!-- <a href="mailto:sondasengupta@example.comm">sondasengupta@example.com</a> -->
 
 	<section id="education">
 		<h2> Education </h2>
