--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@ permalink: /
   </div>
 
     <!-- <img src="https://www.linkedin.com/mpr/pub/image-PAc4ersDkqdkc0zvvamVvk78urQHIvkOkASxZNbFu0LoImN_PAcxkEPDuES1Qnc4P961/sonda-sengupta.jpg"> -->
-  <div class="tile">
+  <div class="home-tile">
     <h3> Apprentice Developer </h3>
     <p>Hi all, I'm an apprentice developer currently studying software development at the Nashville Software School. Right now, my interests are in front end development such as CSS and Javascript.</p>
   </div>
-  <div class="tile">
+  <div class="home-tile">
     <h3> My Background</h3>
     <p>
       I come from a technical support background, although I spent much of my years in college in the scientific research world studying neuroscience and philosophy.
     </p>
   </div>
-  <div class="tile">
+  <div class="home-tile">
     <h3> Learn More </h3>
     <p>
       If you would like to know more about my work background please visit my
