Fixed simplistic styling to resume.html

--- a/resume.html
+++ b/resume.html
@@ -9,40 +9,27 @@ title: "My Resume"
 	<!-- <a href="mailto:sondasengupta@example.comm">sondasengupta@example.com</a> -->
 
 	<section id="education">
-		<h2> Education </h2>
+		<h2> Developer Education </h2>
 		<ul>
 			<li>
 				<h3> Apprentice Developer </h3>
-				<span class="begin"> October 2014 </span>
+				<span class="begin"> October 2014 -</span>
 				<span class="end"> April 2014 </span>
 				<span class="employer"> Nashville Software School </span>
 				<ul class="responsibilities">
-					<li>Currently, I'm here as an apprentice as part of Cohort 7 learning front end web development and server side technologies</li>
-			</li>
-
-			<li>
-				<h3> Bachelors of Science Magna Cum Laude Neuroscience </h3>
-				<span class="begin"> August 2007</span>
-				<span class="end"> June 2011 </span>
-				<span class="employer"> University of Alabama-Birmingham </span>
-			</li>
-
-			<li>
-				<h3> Bachelors of Arts Magna Cum Laude Philosophy </h3>
-				<span class="begin"> August 2007</span>
-				<span class="end"> June 2011 </span>
-				<span class="employer"> University of Alabama-Birmingham </span>
+					<p>Currently, I'm here as an apprentice as part of Cohort 7 learning front end web development and server side technologies<p>
 			</li>
 		</ul>
+	</section>
 
 
 	<section id="jobs">
-		<h2> Experience </h2>
+		<h2> Work Experience </h2>
 
 		<ul>
 			<li>
 				<h3> Solutions Specialist </h3>
-				<span class="begin"> April 2014</span>
+				<span class="begin"> April 2014 -</span>
 				<span class="end"> October 2014 </span>
 				<span class="employer"> Asurion </span>
 				<span class="employer-location"> Nashville, TN </span>
@@ -54,7 +41,7 @@ title: "My Resume"
 
 			<li>
 				<h3> Operations Agent </h3>
-				<span class="begin"> December 2012</span>
+				<span class="begin"> December 2012 -</span>
 				<span class="end"> April 2014 </span>
 				<span class="employer"> Geek Squad at Best Buy</span>
 				<span class="employer-location"> Brentwood, TN </span>
@@ -66,7 +53,7 @@ title: "My Resume"
 
 			<li>
 				<h3> Freelance Writer </h3>
-				<span class="begin"> June 2012</span>
+				<span class="begin"> June 2012 -</span>
 				<span class="end"> April 2014 </span>
 				<span class="employer"> Self-Employed</span>
 				<span class="employer-location"> Nashville, TN </span>
@@ -101,6 +88,24 @@ title: "My Resume"
 				</ul>
 			</li>
 		</ul>
+	</section>
+	<section id="formal-education">
+		<h2> Formal Education </h2>
+		<ul>
+			<li>
+				<h3> Bachelors of Science Magna Cum Laude, Neuroscience </h3>
+				<span class="begin"> August 2007 -</span>
+				<span class="end"> June 2011 </span>
+				<span class="employer"> University of Alabama-Birmingham </span>
+			</li>
+
+			<li>
+				<h3> Bachelors of Arts Magna Cum Laude, Philosophy </h3>
+				<span class="begin"> August 2007 -</span>
+				<span class="end"> June 2011 </span>
+				<span class="employer"> University of Alabama-Birmingham </span>
+			</li>
+	</ul>
 	</section>
 </body>
 </html>
