Added github and portfolio button to homepage

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ permalink: /
     <div class="page-lead">
     <h1 class="main-hello">Hello world, I'm Sonda!</h1>
     <h2> Apprentice Developer </h2>
+    <span> <a href="/portfolio.html" class="home-button">View my Portfolio</a> or
+    <a href="https://github.com/sondasengupta" class="home-button">Peruse my Github</a> </span>
   </div>
 
     <!-- <img src="https://www.linkedin.com/mpr/pub/image-PAc4ersDkqdkc0zvvamVvk78urQHIvkOkASxZNbFu0LoImN_PAcxkEPDuES1Qnc4P961/sonda-sengupta.jpg"> -->
