--- a/resources.html
+++ b/resources.html
@@ -1,7 +1,15 @@
 ---
 layout: page
-title: "My Portfolio"
+title: "Resources"
 ---
+
+
+
+
+
+
+
+
 What have I been up to currently? Quite a bit! Take a look.
 
 ###My Personal Site
