--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -15,8 +15,8 @@ permalink: /portfolio/
         <p> {{post.excerpt}}
           <a href="{{ post.url | prepend: site.baseurl }}">More...</a>
         </p>
-        <a href={{post.app}}><img class="portfolio-icon" src="port-img/play-icon.png" title= "Go to the App"></a>
-        <a href={{post.github}}><img class="portfolio-icon" src="port-img/small-github-icon.png" title= "Go to Github Page"></a>
+        <a href={{post.app}}><img class="portfolio-icon" src="/icons/play-icon.png" title= "Go to the App"></a>
+        <a href={{post.github}}><img class="portfolio-icon" src="/icons/small-github-icon.png" title= "Go to Github Page"></a>
         <span class="post-meta post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
       </li>
       {% endif %}
