fixed link for portfolio on jumbotron

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ permalink: /
     <div class="page-lead">
     <h1 class="main-hello">Hello world, I'm Sonda!</h1>
     <h2> Apprentice Developer </h2>
-    <span> <a href="/portfolio.html" class="home-button">View my Portfolio</a> or
+    <span> <a href="/portfolio/" class="home-button">View my Portfolio</a> or
     <a href="https://github.com/sondasengupta" class="home-button">Peruse my Github</a> </span>
   </div>
 
