initial styling for resume page

--- a/resume.html
+++ b/resume.html
@@ -10,14 +10,16 @@ title: Resume
 
 	<section id="education">
 		<h2> Developer Education </h2>
+		<hr>
 		<ul>
 			<li>
+				<br>
 				<h3> Apprentice Developer </h3>
 				<span class="begin"> October 2014 -</span>
 				<span class="end"> April 2014 </span>
 				<span class="employer"> Nashville Software School </span>
 				<ul class="responsibilities">
-					<p>Currently, I'm here as an apprentice as part of Cohort 7 learning front end web development and server side technologies<p>
+					<p>- Currently, I'm here as an apprentice as part of Cohort 7 learning front end web development and server side technologies<p>
 			</li>
 		</ul>
 	</section>
@@ -25,7 +27,7 @@ title: Resume
 
 	<section id="jobs">
 		<h2> Work Experience </h2>
-
+		<hr>
 		<ul>
 			<li>
 				<h3> Solutions Specialist </h3>
@@ -34,8 +36,8 @@ title: Resume
 				<span class="employer"> Asurion </span>
 				<span class="employer-location"> Nashville, TN </span>
 				<ul class="resposibilities">
-					<li>provided support for mobile devices including the iOS, Android, Windows, and Blackberry</li>
-					<li>specialized in technical support for mobile device connectivity within a client's home, office, and vehicle.</li>
+					<li>- provided support for mobile devices including the iOS, Android, Windows, and Blackberry</li>
+					<li>- specialized in technical support for mobile device connectivity within a client's home, office, and vehicle.</li>
 				</ul>
 			</li>
 
@@ -46,8 +48,8 @@ title: Resume
 				<span class="employer"> Geek Squad at Best Buy</span>
 				<span class="employer-location"> Brentwood, TN </span>
 				<ul class="resposibilities">
-					<li>In charge of tracking and progress of all repairs done at the Brentwood service location and act as a liaison between repair agents, clients, and the service centers.</li>
-					<li>Assist in the diagnosis, education, and repair of computers, tablets, and phones of clients.</li>
+					<li>- In charge of tracking and progress of all repairs done at the Brentwood service location and act as a liaison between repair agents, clients, and the service centers.</li>
+					<li>- Assist in the diagnosis, education, and repair of computers, tablets, and phones of clients.</li>
 				</ul>
 			</li>
 
@@ -58,8 +60,8 @@ title: Resume
 				<span class="employer"> Self-Employed</span>
 				<span class="employer-location"> Nashville, TN </span>
 				<ul class="resposibilities">
-					<li>Collaborate and create written content about a variety of nonfiction topics for clients.</li>
-					<li>Specialize in writing technical and how to articles on the latest technologies </li>
+					<li>- Collaborate and create written content about a variety of nonfiction topics for clients.</li>
+					<li>- Specialize in writing technical and how to articles on the latest technologies </li>
 				</ul>
 			</li>
 
@@ -70,9 +72,9 @@ title: Resume
 				<span class="employer"> AmeriCorps: Impact Alabama</span>
 				<span class="employer-location"> Birmingham, AL </span>
 				<ul class="resposibilities">
-					<li>This was a fast-paced non-profit job going from one initiative to another—learning 2011 tax law to lead a tax site in under three months and vision screening care to direct screenings in under two weeks.</li>
-					<li>Served as the lead site coordinator at the Bessemer tax site where my team prepared over 200 tax returns to low income families for the 2011 tax year and often called in for conflict resolution between taxpayers and staff, explaining at various tax sites the procedure in upholding all IRS regulations</li>
-					<li>Set up equipment for AP biology classes as well as set up and directed vision screenings, traveling to day cares and Head Starts all across Alabama. My coworkers and I screened over 27,000 children the year of my commitment.</li>
+					<li>- This was a fast-paced non-profit job going from one initiative to another—learning 2011 tax law to lead a tax site in under three months and vision screening care to direct screenings in under two weeks.</li>
+					<li>- Served as the lead site coordinator at the Bessemer tax site where my team prepared over 200 tax returns to low income families for the 2011 tax year and often called in for conflict resolution between taxpayers and staff, explaining at various tax sites the procedure in upholding all IRS regulations</li>
+					<li>- Set up equipment for AP biology classes as well as set up and directed vision screenings, traveling to day cares and Head Starts all across Alabama. My coworkers and I screened over 27,000 children the year of my commitment.</li>
 				</ul>
 			</li>
 
@@ -83,14 +85,15 @@ title: Resume
 				<span class="employer"> University of Alabama in Birmingham</span>
 				<span class="employer-location"> Birmingham, AL </span>
 				<ul class="resposibilities">
-					<li>Worked under Dr. Eric Roth in Dr. David Sweatt’s lab at the McKnight Brain Institute setting up experiments, caring for lab animals, and analyzing research data.</li>
-					<li>Worked and presented a 3 year long research study about the role of epigenetics and memory formation using the Morris water maze.</li>
+					<li>- Worked under Dr. Eric Roth in Dr. David Sweatt’s lab at the McKnight Brain Institute setting up experiments, caring for lab animals, and analyzing research data.</li>
+					<li>- Worked and presented a 3 year long research study about the role of epigenetics and memory formation using the Morris water maze.</li>
 				</ul>
 			</li>
 		</ul>
 	</section>
 	<section id="formal-education">
 		<h2> Formal Education </h2>
+		<hr>
 		<ul>
 			<li>
 				<h3> Bachelors of Science Magna Cum Laude, Neuroscience </h3>
