redo the home tiles

--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 ---
 layout: page
-title: About
 permalink: /
 ---
 <html>
   <body class= "home-body">
     <div class="page-lead">
     <h1 class="main-hello">Hello world, I'm Sonda!</h1>
-    <h2> Apprentice Developer </h2>
+    <h2> Software Developer </h2>
     <span> <a href="/portfolio/" class="home-button">View my Portfolio</a> or
     <a href="https://github.com/sondasengupta" class="home-button">Peruse my Github</a> </span>
   </div>
 
   <div class="hometile-wrapper">
     <div class="home-tile">
-      <h3> Apprentice Developer </h3>
-      <p>Hi all, I'm an apprentice developer currently studying software development at the Nashville Software School. Right now, my interests are in front end development such as CSS and Javascript.</p>
+      <h3> About Me </h3>
+      <p> I've loved creating things ever since I was a kid from whimsical art to practical objects.</p>
+      <p> Bringing together my two passions of art and practicality, <b><i> I make beautiful, useful software for a living. </b></i> </p>
+  </div>
+    <div class="home-tile">
+      <h3> My Skills</h3>
+      <p> My front end experience includes HTML, CSS, SASS, Bootstrap, Javascript, JQuery, and Angular.</p>
+      <p> My back end experience includes the .NET Framework, including C#, XAML, and MySQL.</p>
     </div>
     <div class="home-tile">
-      <h3> My Background</h3>
+      <h3> Yes, I am for Hire. </h3>
+      <p>Currently, I am completing my formal developer education at the Nashville Software School.</p>
       <p>
-        I come from a technical support background, although I spent much of my years in college in the scientific research world studying neuroscience and philosophy.
-      </p>
-    </div>
-    <div class="home-tile">
-      <h3> Learn More </h3>
-      <p>
-        If you would like to know more about my work background please visit my
-        <a href="https://www.linkedin.com/pub/sonda-sengupta/57/121/948"> My LinkedIn profile </a>
+        If you would like to get in touch or know more about my work, please visit my
+        <a href="https://www.linkedin.com/pub/sonda-sengupta/57/121/948"> My LinkedIn profile. </a>
       </p>
     </div>
   </div>
