--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@ permalink: /
             <p>{{post.excerpt}}
               <a href="{{ post.url | prepend: site.baseurl }}">More...</a>
             </p>
-            <a href={{post.app}}><img class="tile-icon" src="/icons/play-icon.png" title= "Go to the Demo"></a>
+            {% if post.app contains 'http' %}
+              <a href={{post.app}}><img class="tile-icon" src="/icons/play-icon.png" title= "Go to the Demo"></a>
+            {% endif %}
             <a href={{post.github}}><img class="tile-icon" src="/icons/small-github-icon.png" title= "Go to Github Page"></a>
             <span class="post-meta tile-date">{{ post.date | date: "%b %-d, %Y" }}</span>
           </li>
