Added photo to home

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ permalink: /
   <div class="hometile-wrapper">
     <div class="home-tile">
       <h3> About Me </h3>
+      <img class = "headshot" src="images/headshot.jpg" alt="pic of Sonda">
       <p> I've loved creating things ever since I was a kid from whimsical art to practical objects.</p>
       <p> Bringing together my two passions of art and practicality, <b><i> I make beautiful, useful software for a living. </b></i> </p>
   </div>
