More content to home

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@ permalink: /
       <p> Bringing together my two passions of art and practicality, <b><i> I make beautiful, useful software for a living. </b></i> </p>
   </div>
     <div class="home-tile">
-      <h3> My Skills</h3>
-      <p> My front end experience includes HTML, CSS, SASS, Bootstrap, Javascript, JQuery, and Angular.</p>
-      <p> My back end experience includes the .NET Framework, including C#, XAML, and MySQL.</p>
+      <h3> My Passions</h3>
+      <p> My front end experience includes <b>HTML, CSS, SASS, Bootstrap, Javascript, JQuery, and Angular.</b> What I love about front-end is figuring out how to create a rich, intuitive experience for users.</p>
+      <p> My back end experience includes the <b>.NET Framework, including C#, XAML, WPF, and SQL Server.</b> What makes back-end satisfying is structuring the brains and heart of an app-- the business logic and its database.</p>
     </div>
     <div class="home-tile">
       <h3> Yes, I am for Hire. </h3>
-      <p>Currently, I am completing my formal developer education at the Nashville Software School.</p>
+      <p>I just completed my formal developer education at the Nashville Software School!</p>
+      <p>Front-end, back-end, new technology or old -- I'm looking for a great place to work, a great team to be a part of, and the opportunity to build great things.</p>
       <p>
-        If you would like to get in touch or know more about my work, please visit my
-        <a href="https://www.linkedin.com/pub/sonda-sengupta/57/121/948"> My LinkedIn profile. </a>
+        If you would like to get in touch just send a LinkedIn message at
+        <a href="https://www.linkedin.com/pub/sonda-sengupta/57/121/948"> my LinkedIn profile</a> or shoot an email to sondasengupta@gmail.com
       </p>
     </div>
   </div>
