--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@ permalink: /
       <p> My back end experience includes the <b>.NET Framework, including C#, XAML, WPF, and SQL Server.</b> What makes back-end satisfying is structuring the brains and heart of an app-- the business logic and its database.</p>
     </div>
     <div class="home-tile">
-      <h3> Yes, I am for Hire. </h3>
-      <p>I just completed my formal developer education at the Nashville Software School!</p>
-      <p>Front-end, back-end, new technology or old -- I'm looking for a great place to work, a great team to be a part of, and the opportunity to build great things.</p>
+      <h3> Code for a Better World </h3>
+      <p>After finishing up at Nashville Software School, I'm currently a full stack application developer at HCA.</p>
+      <p>Front-end, back-end, new technology or old -- I'm always looking for opportunities to be part of a great team with the opportunity to build great things.</p>
       <p>
         If you would like to get in touch just send a LinkedIn message at
-        <a href="https://www.linkedin.com/pub/sonda-sengupta/57/121/948"> my LinkedIn profile</a> or shoot an email to sondasengupta@gmail.com
+        <a href="https://www.linkedin.com/pub/sonda-sengupta/57/121/948"> my LinkedIn profile</a>
       </p>
     </div>
   </div>
