--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ permalink: /
       <p> My back end experience includes the <b>.NET Framework, including C#, XAML, WPF, and SQL Server.</b> What makes back-end satisfying is structuring the brains and heart of an app-- the business logic and its database.</p>
     </div>
     <div class="home-tile">
-      <h3> Code for a Better World </h3>
+      <h3> Code a Better World</h3>
       <p>After finishing up at Nashville Software School, I'm currently a full stack application developer at HCA.</p>
       <p>Front-end, back-end, new technology or old -- I'm always looking for opportunities to be part of a great team with the opportunity to build great things.</p>
       <p>
