--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ permalink: /
     <div class="home-tile">
       <h3> My Passions</h3>
       <p> My front end experience includes <b>HTML, CSS, SASS, Bootstrap, Javascript, JQuery, and Angular.</b> What I love about front-end is figuring out how to create a rich, intuitive experience for users.</p>
-      <p> My back end experience includes the <b>.NET Framework, including C#, XAML, WPF, and SQL Server.</b> What makes back-end satisfying is structuring the brains and heart of an app-- the business logic and its database.</p>
+      <p> My back end experience includes the <b>.NET Framework with SQL Server.</b> What makes back-end satisfying is structuring the brains and heart of an app-- the business logic and its database.</p>
     </div>
     <div class="home-tile">
       <h3> Code a Better World</h3>
